# RM_Taurus_Sentry_ws

./: LICENSE  README.md  Readme.txt  sim_nav.sh
sh/RMUC_final/: 11下，打.sh
src/Point-LIO/: CMakeLists.txt  README.md  package.xml
src/Point-LIO/config/: avia.yaml  mid360_daofang.yaml  mid360_zhengfang.yaml
src/Point-LIO/include/: common_lib.h  so3_math.h
src/Point-LIO/include/ikd-Tree/: ikd_Tree.cpp
src/Point-LIO/launch/: mapping_mid360.launch.py
src/Point-LIO/src/: IMU_Processing.hpp  laserMapping.cpp  parameters.cpp  parameters.h  preprocess.cpp
src/Point-LIO_cxr/: CMakeLists.txt  package.xml
src/Point-LIO_cxr/config/: RMUC.yaml  left.yaml  mid360_inverse.yaml  right.yaml
src/Point-LIO_cxr/include/IKFoM/IKFoM_toolkit/esekfom/: esekfom.hpp
src/Point-LIO_cxr/include/IKFoM/IKFoM_toolkit/mtk/types/: S2.hpp
src/Point-LIO_cxr/include/ikd-Tree/: ikd_Tree.cpp
src/Point-LIO_cxr/launch/: RMUC.launch.py  RMUC_left.launch.py  RMUC_right.launch.py  mapping_mid360.launch.py
src/Point-LIO_cxr/src/: laserMapping.cpp  parameters.cpp  parameters.h  preprocess.h
src/duckietown_interface/: CMakeLists.txt  package.xml
src/duckietown_interface/msg/: Tfstamp.msg
src/livox_ros_driver2/config/: MID360_config.json
src/livox_ros_driver2/launch/: msg_MID360_launch.py
src/livox_ros_driver2/src/: lddc.cpp  lds_lidar.cpp  livox_ros_driver2.cpp
src/localization_interface/: CMakeLists.txt  package.xml
src/localization_interface/msg/: Transformstamp.msg
src/localization_interface/src/: test.cpp
src/nav2/nav2_behavior_tree/plugins/action/: compute_path_to_pose_action.cpp  follow_path_action.cpp  navigate_to_pose_action.cpp
src/nav2/nav2_behavior_tree/src/: behavior_tree_engine.cpp
src/nav2/nav2_behavior_tree/test/plugins/action/: test_navigate_to_pose_action.cpp
src/nav2/nav2_behaviors/plugins/: back_up.cpp  spin.cpp  wait.cpp
src/nav2/nav2_bt_navigator/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_goal_patience_and_recovery.xml  navigate_w_replanning_only_if_path_becomes_invalid.xml
src/nav2/nav2_bt_navigator/include/nav2_bt_navigator/: navigator.hpp
src/nav2/nav2_bt_navigator/src/navigators/: navigate_through_poses.cpp  navigate_to_pose.cpp
src/nav2/nav2_controller/src/: controller_server.cpp
src/nav2/nav2_costmap_2d/src/: clear_costmap_service.cpp
src/nav2/nav2_lifecycle_manager/src/: lifecycle_manager.cpp
src/nav2/nav2_planner/src/: planner_server.cpp
src/pid_follow_/: CMakeLists.txt  package.xml
src/pid_follow_/src/: pid_follow_.cpp
src/remove_pointcloud/: CMakeLists.txt  package.xml
src/remove_pointcloud/config/: RMUC.yaml  remove_pointcloud.yaml
src/remove_pointcloud/include/remove_pointcloud/: remove_pointcloud.hpp
src/remove_pointcloud/launch/: remove_pointcloud.launch.py
src/remove_pointcloud/src/: remove_pointcloud.cpp
src/rm_navigation/launch/: bringup_launch.py  bringup_no_amcl_launch.py  navigation_launch.py
src/rm_navigation/map/: map_gongxun_daofang2.pgm  map_gongxun_daofang2.yaml  map_gongxundaofang.pgm  map_gongxundaofang.yaml  map_gongxundaofang_big.pgm  map_gongxundaofang_big.yaml  map_gongxunzhengfang.pgm  map_gongxunzhengfang.yaml  map_gongxunzhengfang2.pgm  map_gongxunzhengfang2.yaml
src/rm_navigation/params/: mapper_params_online_async.yaml  nav2_params.yaml  test.yaml
src/rm_perception/imu_complementary_filter/src/: complementary_filter_ros.cpp
src/rm_perception/pointcloud_to_laserscan/launch/: pointcloud_to_laserscan_launch.py
src/rm_perception/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
src/rm_simulation/livox_laser_simulation_RO2/src/: livox_points_plugin.cpp
src/rm_simulation/livox_laser_simulation_RO2/urdf/: mid360.xacro
src/rm_simulation/pb_rm_simulation/launch/: rm_real.launch.py  rm_simulation.launch.py
src/rm_simulation/pb_rm_simulation/urdf/: real_waking_robot.xacro  simulation_waking_robot.xacro
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: DecisionCtrl.msg  GameStatus.msg  GimbalCtrl.msg  GimbalFdb.msg  IsSub.msg  LocationInfo.msg  RobotStatus.msg  VisionCtrl.msg  VisionStatus.msg  VisualStatus.msg
src/robot_msgs/srv/: Decision.srv
