<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pid_follow_</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="503882096@qq.com">wei</maintainer>
  <license>TODO: License declaration</license>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_msgs</depend>
  <depend>example_interfaces</depend> 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
